feat: add icon on home screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,19 @@
     tools:context=".ui.MainActivity"
     android:padding="4sp" >
 
+    <ImageView
+        android:layout_width="128dp"
+        android:layout_height="128dp"
+        android:background="@drawable/ic_passodes"
+        android:contentDescription="Passcodes Logo" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
         android:layout_margin="16sp">
-        
+
         <com.google.android.material.textview.MaterialTextView 
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
