--- a/app/src/main/res/layout/activity_view_password.xml
+++ b/app/src/main/res/layout/activity_view_password.xml
@@ -87,10 +87,12 @@
       android:layout_height="wrap_content"
       android:text="@string/update_password_button_text"
       android:textSize="14dp" />
-    
+
 	<com.google.android.material.button.MaterialButton
       android:id="@+id/delete_password_btn"
       style="@style/Widget.Material3.Button.TonalButton"
+      android:textColor="?attr/colorOnError"
+      android:backgroundTint="?attr/colorOnErrorContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/delete_password_button_text"
