--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -118,4 +118,31 @@
                 android:layout_margin="8dp"/>
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/clear_all_data_card"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        app:cardCornerRadius="16dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="16dp">
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/clear_all_data_btn"
+                android:layout_width="wrap_content"
+                style="@style/Widget.Material3.Button.TonalButton"
+                android:textColor="?attr/colorOnError"
+                android:backgroundTint="?attr/colorOnErrorContainer"
+                android:layout_height="wrap_content"
+                android:text="@string/clear_all_data_button_text"
+                android:textSize="12sp"
+                android:layout_gravity="right|center_vertical" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
