--- a/app/src/main/res/layout/activity_view_password.xml
+++ b/app/src/main/res/layout/activity_view_password.xml
@@ -82,7 +82,7 @@
 
     <com.google.android.material.button.MaterialButton
       android:id="@+id/update_password_btn"
-      style="@style/Widget.Material3.Button.TonalButton"
+      style="@style/Widget.Material3.Button.OutlinedButton"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/update_password_button_text"
@@ -90,7 +90,7 @@
 
 	<com.google.android.material.button.MaterialButton
       android:id="@+id/delete_password_btn"
-      style="@style/Widget.Material3.Button.TonalButton"
+      style="@style/Widget.Material3.Button.OutlinedButton"
       android:textColor="?attr/colorOnError"
       android:backgroundTint="?attr/colorOnErrorContainer"
       android:layout_width="match_parent"
