--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="128dp"
         android:layout_height="128dp"
         android:background="@drawable/ic_passodes"
-        android:contentDescription="Passcodes Logo" />
+        android:contentDescription="@string/passcodes_logo" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -20,15 +20,15 @@
         android:orientation="vertical"
         android:layout_margin="16sp">
 
-        <com.google.android.material.textview.MaterialTextView 
+        <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
             android:text="@string/app_name"
             android:textAlignment="center"
             android:textSize="32dp" />
-            
-        <com.google.android.material.textview.MaterialTextView 
+
+        <com.google.android.material.textview.MaterialTextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="4dp"
@@ -50,7 +50,7 @@
             android:layout_height="wrap_content"
             android:text="@string/password_manager_button_text"
             android:textSize="14dp" />
-        
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/setting_btn"
             style="@style/Widget.Material3.Button.OutlinedButton"
