--- a/app/src/main/res/layout/activity_view_password.xml
+++ b/app/src/main/res/layout/activity_view_password.xml
@@ -91,7 +91,7 @@
 	<com.google.android.material.button.MaterialButton
       android:id="@+id/delete_password_btn"
       style="@style/Widget.Material3.Button.OutlinedButton"
-      android:textColor="?attr/colorOnError"
+      android:textColor="?attr/colorOnErrorContainer"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/delete_password_button_text"
