--- a/app/src/main/res/layout/activity_save_password.xml
+++ b/app/src/main/res/layout/activity_save_password.xml
@@ -20,7 +20,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
       android:text="@string/textview_savepassword_headline"
-      android:textSize="32dp" />
+      android:textSize="32sp" />
   </LinearLayout>
   
   <LinearLayout
@@ -107,7 +107,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/save_password_button_text"
-          android:textSize="14dp" />
+          android:textSize="14sp" />
   </LinearLayout>
   
 </LinearLayout>
