--- a/app/src/main/res/layout/activity_view_password.xml
+++ b/app/src/main/res/layout/activity_view_password.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center"
-  android:orientation="vertical"
-	tools:context=".ui.ViewPasswordActivity"
-  android:padding="4sp" >
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".ui.ViewPasswordActivity"
+    android:padding="4sp">
     
   <LinearLayout
     android:layout_width="wrap_content"
@@ -20,7 +19,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
       android:text="@string/textview_viewpassword_headline"
-      android:textSize="32dp" />
+      android:textSize="32sp" />
   </LinearLayout>
   
   <LinearLayout
@@ -35,35 +34,35 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:textSize="12dp" />
+      android:textSize="12sp" />
 
     <com.google.android.material.textview.MaterialTextView 
       android:id="@+id/tv_username"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:textSize="12dp" />
+      android:textSize="12sp" />
       
     <com.google.android.material.textview.MaterialTextView 
       android:id="@+id/tv_password"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:textSize="12dp" />
+      android:textSize="12sp" />
     
     <com.google.android.material.textview.MaterialTextView 
       android:id="@+id/tv_notes"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:textSize="12dp" />
+      android:textSize="12sp" />
     
     <com.google.android.material.textview.MaterialTextView 
       android:id="@+id/tv_updated_at"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
-      android:textSize="12dp" />
+      android:textSize="12sp" />
   </LinearLayout>
   
   <LinearLayout
@@ -78,7 +77,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/copy_password_button_text"
-      android:textSize="14dp" />
+      android:textSize="14sp" />
 
     <com.google.android.material.button.MaterialButton
       android:id="@+id/update_password_btn"
@@ -86,7 +85,7 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/update_password_button_text"
-      android:textSize="14dp" />
+      android:textSize="14sp" />
 
 	<com.google.android.material.button.MaterialButton
       android:id="@+id/delete_password_btn"
@@ -95,6 +94,6 @@
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/delete_password_button_text"
-      android:textSize="14dp" />
+      android:textSize="14sp" />
   </LinearLayout>
 </LinearLayout>
