--- a/app/src/main/res/layout/activity_load_password.xml
+++ b/app/src/main/res/layout/activity_load_password.xml
@@ -15,7 +15,7 @@
 		android:paddingBottom="12sp"
 		android:text="@string/textview_loadpassword_headline"
 		android:textAlignment="center"
-		android:textSize="32dp" />
+		android:textSize="32sp" />
 
 	<ListView
 		android:id="@+id/password_list"
