--- a/app/src/main/res/layout/activity_password_manager.xml
+++ b/app/src/main/res/layout/activity_password_manager.xml
@@ -14,7 +14,7 @@
       android:paddingBottom="12sp"
       android:text="@string/textview_passwordmanager_headline"
       android:textAlignment="center"
-      android:textSize="32dp" />
+      android:textSize="32sp" />
 
     <LinearLayout
       android:layout_width="wrap_content"
@@ -28,14 +28,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/save_password_button_text"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
           
       <com.google.android.material.button.MaterialButton
         android:id="@+id/load_password_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/load_password_button_text"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
 
       <com.google.android.material.button.MaterialButton
         android:id="@+id/import_password_btn"
@@ -43,7 +43,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/import_password_button_text"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
       
       <com.google.android.material.button.MaterialButton
         android:id="@+id/export_password_btn"
@@ -51,6 +51,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/export_password_button_text"
-        android:textSize="14dp" />
+        android:textSize="14sp" />
     </LinearLayout>
 </LinearLayout>
