--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -19,7 +19,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="4dp"
       android:text="@string/textview_updatepassword_headline"
-      android:textSize="32dp" />
+      android:textSize="32sp" />
   </LinearLayout>
   
   <LinearLayout
@@ -35,7 +35,7 @@
       android:layout_height="wrap_content"
       android:layout_margin="12sp"
       android:textAlignment="center"
-      android:textSize="16dp" />
+      android:textSize="16sp" />
 
     <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
@@ -110,7 +110,7 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/update_password_button_text"
-          android:textSize="14dp" />
+          android:textSize="14sp" />
   </LinearLayout>
   
 </LinearLayout>
