--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -76,7 +76,7 @@
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
-                            android:contentDescription="view security guidelines"
+                            android:contentDescription="View Security Guidelines"
                             android:src="@drawable/ic_security"
                             app:tint="?attr/colorPrimary"
                             android:layout_marginBottom="8dp" />
@@ -107,7 +107,7 @@
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
-                            android:contentDescription="release notes"
+                            android:contentDescription="Release Notes"
                             android:src="@drawable/ic_history"
                             app:tint="?attr/colorPrimary"
                             android:layout_marginBottom="8dp" />
@@ -138,7 +138,7 @@
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
-                            android:contentDescription="document icon"
+                            android:contentDescription="Document Icon"
                             android:src="@drawable/ic_article"
                             app:tint="?attr/colorPrimary"
                             android:layout_marginBottom="8dp" />
@@ -169,7 +169,7 @@
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
-                            android:contentDescription="report bug"
+                            android:contentDescription="Report Bug"
                             android:src="@drawable/ic_bug_report"
                             app:tint="?attr/colorPrimary"
                             android:layout_marginBottom="8dp" />
@@ -203,7 +203,7 @@
                             android:layout_width="128dp"
                             android:layout_height="128dp"
                             android:layout_marginBottom="8dp"
-                            android:contentDescription="join telegram community"
+                            android:contentDescription="Join Telegram Community"
                             android:src="@drawable/ic_send"
                             app:tint="?attr/colorPrimary" />
                         <TextView
