refactor: made autofill as preview feature

--- a/app/src/main/res/layout/activity_autofill_settings.xml
+++ b/app/src/main/res/layout/activity_autofill_settings.xml
@@ -19,6 +19,15 @@
         android:text="To use Passcodes as your password manager, you need to enable it as an autofill service in your device settings."
         android:textAlignment="center" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textColor="?attr/colorSecondary"
+        android:textStyle="bold"
+        android:text="Passcodes Autofill is preview feature and shouldn't be use in production!!"
+        android:textAlignment="center" />
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/enable_autofill_button"
         android:layout_width="wrap_content"
