--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,5 +1,4 @@
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -40,7 +39,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="@string/textview_app_description"
                 android:textAlignment="viewStart"
-                android:textColor="?attr/colorOnSurface"/>
+                android:textColor="?attr/colorOnSurface" />
 
             <com.google.android.material.textview.MaterialTextView
                 style="@style/TextAppearance.Material3.BodyMedium"
@@ -49,7 +48,7 @@
                 android:layout_marginBottom="24dp"
                 android:text="@string/textview_app_warning"
                 android:textAlignment="viewStart"
-                android:textColor="?attr/colorOnSurfaceVariant"/>
+                android:textColor="?attr/colorOnSurfaceVariant" />
 
             <GridLayout
                 android:layout_width="match_parent"
@@ -70,22 +69,24 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="vertical"
-                        android:padding="16dp"
-                        android:gravity="center">
+                        android:padding="16dp">
+
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
+                            android:layout_marginBottom="8dp"
                             android:contentDescription="View Security Guidelines"
                             android:src="@drawable/ic_security"
-                            app:tint="?attr/colorPrimary"
-                            android:layout_marginBottom="8dp" />
+                            app:tint="?attr/colorPrimary" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view_security_guidelines_button_text"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -101,22 +102,24 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="vertical"
-                        android:padding="16dp"
-                        android:gravity="center">
+                        android:padding="16dp">
+
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
+                            android:layout_marginBottom="8dp"
                             android:contentDescription="Release Notes"
                             android:src="@drawable/ic_history"
-                            app:tint="?attr/colorPrimary"
-                            android:layout_marginBottom="8dp" />
+                            app:tint="?attr/colorPrimary" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view_release_notes_button_text"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -132,22 +135,24 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="vertical"
-                        android:padding="16dp"
-                        android:gravity="center">
+                        android:padding="16dp">
+
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
+                            android:layout_marginBottom="8dp"
                             android:contentDescription="Document Icon"
                             android:src="@drawable/ic_article"
-                            app:tint="?attr/colorPrimary"
-                            android:layout_marginBottom="8dp" />
+                            app:tint="?attr/colorPrimary" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view_license_button_text"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
 
@@ -163,41 +168,44 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="vertical"
-                        android:padding="16dp"
-                        android:gravity="center">
+                        android:padding="16dp">
+
                         <ImageView
                             android:layout_width="32dp"
                             android:layout_height="32dp"
+                            android:layout_marginBottom="8dp"
                             android:contentDescription="Report Bug"
                             android:src="@drawable/ic_bug_report"
-                            app:tint="?attr/colorPrimary"
-                            android:layout_marginBottom="8dp" />
+                            app:tint="?attr/colorPrimary" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view_report_bug_text"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
+
                 <com.google.android.material.card.MaterialCardView
                     android:id="@+id/card_telegram_community"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_columnWeight="1"
                     android:layout_columnSpan="2"
+                    android:layout_columnWeight="1"
                     android:clickable="true"
                     android:focusable="true"
-                    app:cardCornerRadius="16dp"
-                    app:cardBackgroundColor="?attr/colorSecondaryContainer">
+                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
+                    app:cardCornerRadius="16dp">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:gravity="center"
                         android:orientation="vertical"
-                        android:padding="16dp"
-                        android:gravity="center">
+                        android:padding="16dp">
 
                         <ImageView
                             android:layout_width="128dp"
@@ -206,12 +214,13 @@
                             android:contentDescription="Join Telegram Community"
                             android:src="@drawable/ic_send"
                             app:tint="?attr/colorPrimary" />
+
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/view_telegram_community_text"
-                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
-                            android:textAlignment="center"/>
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge" />
                     </LinearLayout>
                 </com.google.android.material.card.MaterialCardView>
             </GridLayout>
@@ -223,31 +232,33 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/label_contributor"
-                android:textColor="?attr/colorOnSurface"/>
+                android:textColor="?attr/colorOnSurface" />
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardCornerRadius="16dp"
-                android:layout_marginBottom="8dp">
+                android:layout_marginBottom="8dp"
+                app:cardCornerRadius="16dp">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/developer_name"
                     android:padding="16dp"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
+                    android:text="@string/developer_name"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:cardCornerRadius="16dp">
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/code_maintainer"
                     android:padding="16dp"
-                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"/>
+                    android:text="@string/code_maintainer"
+                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
