--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,10 +13,10 @@
         android:id="@+id/settings_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="24dp"
         android:text="@string/textview_settings_headline"
         android:textAlignment="center"
-        android:textSize="32sp"
-        android:paddingTop="24dp" />
+        android:textSize="32sp" />
 
     <!-- Language Selection Card -->
     <com.google.android.material.card.MaterialCardView
@@ -30,25 +29,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_margin="8dp"
                 android:text="@string/label_language_setting"
                 android:textColor="?attr/colorPrimary"
-                android:textSize="16sp"
-                android:layout_gravity="left|center_vertical"
-                android:layout_margin="8dp" />
+                android:textSize="16sp" />
 
             <Spinner
                 android:id="@+id/lang_switch_dropdown"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:entries="@array/lang_options"
-                android:layout_gravity="right|center_vertical" />
+                android:layout_gravity="right|center_vertical"
+                android:entries="@array/lang_options" />
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -64,26 +63,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center_horizontal"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="left|center_vertical"
+                android:layout_margin="8dp"
                 android:text="@string/label_theme_setting"
                 android:textColor="?attr/colorPrimary"
-                android:textSize="16sp"
-                android:layout_gravity="left|center_vertical"
-                android:layout_margin="8dp" />
+                android:textSize="16sp" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/toggle_theme_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
                 android:text="@string/toggle_theme_button_text"
-                android:textSize="12sp"
-                android:layout_gravity="right|center_vertical" />
+                android:textSize="12sp" />
 
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
@@ -98,24 +97,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.textview.MaterialTextView
-                android:textColor="?attr/colorPrimary"
-                android:text="@string/latest_feature"
-                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:text="@string/latest_feature"
+                android:textColor="?attr/colorPrimary"
+                android:textSize="16sp" />
 
             <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/switch_latest_features"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                tools:ignore="UseSwitchCompatOrMaterialXml"
-                android:layout_margin="8dp"/>
+                android:layout_margin="8dp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -129,24 +128,24 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.textview.MaterialTextView
-                android:textColor="?attr/colorPrimary"
-                android:text="@string/preview_layout"
-                android:textSize="16sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp" />
+                android:layout_margin="8dp"
+                android:text="@string/preview_layout"
+                android:textColor="?attr/colorPrimary"
+                android:textSize="16sp" />
 
             <com.google.android.material.materialswitch.MaterialSwitch
                 android:id="@+id/switch_latest_layout"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                tools:ignore="UseSwitchCompatOrMaterialXml"
-                android:layout_margin="8dp"/>
+                android:layout_margin="8dp"
+                tools:ignore="UseSwitchCompatOrMaterialXml" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -160,19 +159,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/autofill_setting_btn"
-                android:layout_width="wrap_content"
-                android:text="@string/autofill_settings"
-                android:textSize="12sp"
                 style="@style/Widget.Material3.Button.OutlinedButton"
-                android:textColor="?attr/colorSecondary"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical" />
+                android:layout_gravity="right|center_vertical"
+                android:text="@string/autofill_settings"
+                android:textColor="?attr/colorSecondary"
+                android:textSize="12sp" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
@@ -186,19 +185,19 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:gravity="center"
+            android:orientation="horizontal"
             android:padding="16dp">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/clear_all_data_btn"
-                android:layout_width="wrap_content"
-                android:text="@string/clear_all_data_button_text"
-                android:textSize="12sp"
                 style="@style/Widget.Material3.Button.OutlinedButton"
-                android:textColor="?attr/colorError"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right|center_vertical" />
+                android:layout_gravity="right|center_vertical"
+                android:text="@string/clear_all_data_button_text"
+                android:textColor="?attr/colorError"
+                android:textSize="12sp" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 </LinearLayout>
