--- a/autofill/src/main/res/xml/autofill_service.xml
+++ b/autofill/src/main/res/xml/autofill_service.xml
@@ -1,4 +1,3 @@
-<autofill-service
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<autofill-service xmlns:android="http://schemas.android.com/apk/res/android"
     android:settingsActivity="com.jeeldobariya.passcodes.autofill.AutofillSettingsActivity" />
 
