--- a/password_manager/src/main/res/layout/activity_load_password.xml
+++ b/password_manager/src/main/res/layout/activity_load_password.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
-	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:gravity="center"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
-	tools:context=".oldui.LoadPasswordActivity"
-	android:padding="4sp" >
+    android:padding="4sp"
+    tools:context=".oldui.LoadPasswordActivity">
 
-	<com.google.android.material.textview.MaterialTextView
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:paddingTop="45sp"
-		android:paddingBottom="12sp"
-		android:text="@string/textview_loadpassword_headline"
-		android:textAlignment="center"
-		android:textSize="32sp" />
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="45sp"
+        android:paddingBottom="12sp"
+        android:text="@string/textview_loadpassword_headline"
+        android:textAlignment="center"
+        android:textSize="32sp" />
 
-	<ListView
-		android:id="@+id/password_list"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:padding="16dp" />
+    <ListView
+        android:id="@+id/password_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="16dp" />
 
 </LinearLayout>
