--- a/password_manager/src/main/res/layout/password_list_item.xml
+++ b/password_manager/src/main/res/layout/password_list_item.xml
@@ -9,8 +9,8 @@
         android:id="@+id/tv_domain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tv_username"
