style: typos!!!!! (even in products names 🤣🤣🤣🤣🤣🤣)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:layout_width="128dp"
         android:layout_height="128dp"
-        android:background="@drawable/ic_passodes"
+        android:background="@drawable/ic_passcodes"
         android:contentDescription="@string/passcodes_logo" />
 
     <LinearLayout
